@@ -113,13 +113,14 @@ typedef struct edgex_watcher
   edgex_blocklist *blocking_identifiers;
   char *profile;
   edgex_device_adminstate adminstate;
+  struct edgex_device_autoevents *autoevents;
   struct edgex_watcher *next;
 } edgex_watcher;
 
 typedef struct edgex_device_autoevents
 {
   char *resource;
-  char *frequency;
+  char *interval;
   bool onChange;
   struct edgex_autoimpl *impl;
   struct edgex_device_autoevents *next;
